Refactored all the java classes, and remove unnecessary methods/variables. Remove any comments, notes made.